# CourseWorkC2S1

./: .gitignore  CMakeLists.txt  EmptyShop.json  README.md  Shop.json  main.cpp  result.json  Люди.drawio  Претензии.txt  Схема зависимостей.drawio
examples/: Shop2.json  result.json
src/: entity.cpp  entity.hpp  log.cpp  log.hpp  map.cpp  map.hpp  parser.cpp  parser.hpp  shopEngine.cpp  shopEngine.hpp  window.cpp  window.hpp
